# tiny_nlls_solver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  dense_visual_odometry_open3d.cpp  triangulation_example.cpp  triangulation_example_advanced.cpp
src/: main.cpp  tiny_solver.h  tiny_solver_autodiff_function.h
tests/: CMakeLists.txt  tiny_solver_autodiff_function_test.cc  tiny_solver_cost_function_adapter_test.cc  tiny_solver_test.cc  tiny_solver_test_util.h
